# twitch_getuser

./: .gitignore  Cargo.toml  README.md
src/: main.rs  twitch.rs
src/twitch/: user.rs
